Change title of map activity
and tidy up a bit of code, too

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Walk Launceston</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Walk Launceston Map</string>
 </resources>
